# pbinator

./: .copier-answers.yml  .env.example  .gitignore  README.md  justfile  pyproject.toml  renovate.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-30-pb-table.md  2026-05-02-whoop-only-filter.md  2026-05-02-whoop-strava-compare.md
docs/superpowers/specs/: 2026-04-30-pb-table-design.md  2026-05-02-whoop-only-filter-design.md  2026-05-02-whoop-strava-compare-design.md
src/pbinator/: activities_api.py  app.py  best_efforts.py  compare.py  garmin.py  garmin_compare.py  models.py  pbs.py  settings.py  store.py  strava.py  sync.py  whoop.py
tests/: conftest.py  test_activities_api.py  test_best_efforts.py  test_compare.py  test_garmin.py  test_garmin_compare.py  test_imports.py  test_models.py  test_pbs.py  test_settings.py  test_store.py  test_strava.py  test_sync.py  test_whoop.py
