[project]
name = "pbinator"
version = "0.1.0"
description = "Streamlit app that signs in with Strava, tracks your running personal bests across the ten standard race distances, and reconciles your activities against Whoop and Garmin exports"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "jedimasterjonny", email = "me@jonnyoc.uk" },
]
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.56.0",
    "streamlit-cookies-controller>=0.0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.30",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.3",
    "pre-commit>=4.0",
    "respx>=0.21",
]

[tool.uv]
required-version = ">=0.11"
python-preference = "only-managed"
package = true
prerelease = "disallow"
compile-bytecode = true
default-groups = ["dev"]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbinator"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "CPY001",
    "FIX002",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
# TC: pytest and respx introspect test signatures at runtime (respx.mock goes
# through inspect.getfullargspec, which evaluates annotations), so an import
# moved into a TYPE_CHECKING block fails collection with "unsupported
# callable". Test modules are never imported by the app, so the rules buy
# nothing here anyway.
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "ANN", "D", "TC"]

[tool.ruff.lint.isort]
known-first-party = ["pbinator"]
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true
# pydantic and SQLModel resolve field annotations at runtime to build their
# validators, so an import used only in their annotations is NOT typing-only.
# Moving one into a TYPE_CHECKING block imports fine and then fails on first
# use ("`Settings` is not fully defined"). Keep these evaluated at runtime.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlmodel.SQLModel",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.14"
root = ["./src", "./tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
ignore-comment-unknown-rule = "error"
ineffective-final = "error"
invalid-enum-member-annotation = "error"
invalid-ignore-comment = "error"
invalid-legacy-positional-parameter = "error"
invalid-named-tuple-override = "error"
mismatched-type-name = "error"
possibly-missing-implicit-call = "error"
possibly-missing-submodule = "error"
redundant-cast = "error"
redundant-final-classvar = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-awaitable = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
useless-overload-body = "error"
division-by-zero = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
unsupported-dynamic-base = "error"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
    "--showlocals",
    "--import-mode=importlib",
    "--cov",
    "--cov-report=term-missing",
]
filterwarnings = ["error"]
xfail_strict = true
empty_parameter_set_mark = "fail_at_collect"
junit_family = "xunit2"
timeout = 10
timeout_method = "thread"
required_plugins = [
    "pytest-cov",
    "pytest-randomly",
    "pytest-timeout",
]

[tool.coverage.run]
source = ["src"]
branch = true
relative_files = true
# Streamlit glue is exercised manually; pure logic lives in src/pbinator/strava.py.
omit = ["src/pbinator/app.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
precision = 2
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
